Change collect(...) to toList()