@@ -5,7 +5,6 @@ import mk.ukim.finki.wp.lab.model.Student;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class StudentRepository {
@@ -17,7 +16,7 @@ public class StudentRepository {
         return DataHolder.students
                 .stream()
                 .filter(s -> s.getName().contains(text) || s.getSurname().contains(text))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Student> save(Student student) {
